# ARDEE-RAG-CHATBOT

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  render.yaml
backend/: .dockerignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_enable_pgvector.py  32124e479426_description.py  a8f2d7c1e9b4_add_rag_schema.py  b1c2d3e4f5a6_add_bots.py  c4d5e6f7a8b9_add_active_document_checksum_unique_index.py  d5e6f7a8b9c0_replace_global_checksum_index.py  d73d14f93a0e_add_user_model.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/dependencies/: auth.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routes/: admin_metrics.py  auth.py  bots.py  chat.py  health.py  metrics.py  rag_documents.py  rag_search.py
backend/app/core/: __init__.py  database.py  exceptions.py  logging.py  metrics.py  redis.py  security.py
backend/app/middleware/: __init__.py  metrics.py  rate_limit.py  request_id.py  security_headers.py
backend/app/models/: __init__.py  base.py  rag.py  user.py
backend/app/repositories/: __init__.py  bot.py  chat.py  metrics.py  rag_document.py  rag_retrieval.py  user.py
backend/app/schemas/: __init__.py  auth.py  health.py  rag.py  user.py
backend/app/services/: __init__.py  bot.py  chat.py  greeting.py  pdf_ingestion.py  pdf_storage.py  rag_document.py  rag_retrieval.py  semantic_cache.py
backend/scripts/: seed_staging.py  start.sh
backend/tests/: test_admin_metrics_routes.py  test_chat_service.py  test_greeting.py  test_health.py  test_metrics.py  test_metrics_repository.py  test_metrics_routes.py  test_pdf_ingestion.py  test_rag_document_management.py  test_rag_retrieval.py  test_rag_schema.py  test_rate_limit.py  test_request_id.py  test_security_headers.py  test_semantic_cache.py
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
frontend/: .dockerignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/documents/: page.tsx
frontend/src/app/admin/metrics/: page.tsx
frontend/src/app/bots/: page.tsx
frontend/src/app/bots/[botId]/: page.tsx
frontend/src/app/bots/[botId]/manage/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/usage/: page.tsx
frontend/src/components/: AppNav.tsx  AuthForm.tsx  BotFormModal.tsx  ChatWorkspace.tsx  CitationList.tsx  ConfirmDialog.tsx  DocumentsPanel.tsx  MarkdownContent.tsx  ProtectedRoute.tsx  UsageChart.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts
