[project]
name = "ardee-rag-chatbot"
version = "0.1.0"
description = "Production-grade RAG chatbot with authentication, hybrid search, semantic cache, and admin panel."
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Nikhilesh Sirohi" }]

dependencies = [
    # --- Web Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",

    # --- Configuration ---
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.9",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # --- Security & Auth ---
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.10.1",

    # --- Redis ---
    "redis>=5.2.0",

    # --- Logging ---
    "structlog>=24.4.0",

    # --- HTTP ---
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    # --- Testing ---
    "pytest>=8.3.0",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.0",

    # --- Linting & Formatting ---
    "ruff>=0.9.0",
    "black>=24.10.0",
    "mypy>=1.14.0",
    "types-passlib>=1.7.7",

    # --- Pre-commit ---
    "pre-commit>=4.0.0",
]

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "RUF",  # ruff-specific rules
]
ignore = [
    "S104",  # Possible binding to all interfaces — intentional for Docker
    "B008",  # Do not perform function call in argument defaults — needed for FastAPI Depends()
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # assert is the standard pattern in pytest

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
target-version = ["py313"]
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
